# AH_04_04

./: .dockerignore  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.nginx.yml  docker-compose.yml  pyproject.toml
.github/workflows/: android-ci.yml  ci.yml  deploy.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml
android/gradle/: libs.versions.toml
app/: Dockerfile  main.py
app/core/: config.py  daily_tips_catalog.py  exercise_videos_catalog.py  faq_catalog.py  terms_catalog.py
app/dependencies/: security.py
app/dtos/: activity_profile.py  auth.py  base.py  daily_tip.py  dashboard.py  exercise_video.py  faq.py  health_check.py  health_profile.py  mission.py  physical_assessment.py  risk_prediction.py  sensor.py  terms.py  users.py  voice_parse.py
app/ml/: predictor.py
app/models/: __init__.py  activity.py  dashboard.py  enums.py  health.py  missions.py  predictions.py  settings.py  terms.py  users.py
app/repositories/: activity_profile_repository.py  dashboard_repository.py  (+10 more)
docs/: aigo_pedometer_2nd_measurement_guide.md  api_examples_mission_activity.md  sensor_walking_gate_a4a.md  sensor_waveform_analysis_manifest.csv  sensor_waveform_capture_field_guide.md  sensor_waveform_capture_protocol.md  sensor_waveform_collection_handoff.md  sensor_waveform_pilot_findings.md  stt_plan_discussion.md  waveform_answer_sheet_template.csv
envs/: example.local.env  example.prod.env
scripts/: analyze_waveform.py  check_migrations.py  compare_voice_parse.py  deployment.sh  seed_mission_templates.py
(+282 files in other folders)
