[project]
name = "ah-04-04"
version = "0.1.0"
description = "Senior lifestyle challenge MVP backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "tomlkit>=0.14.0",
    "tzdata>=2025.2",
]

[dependency-groups]
app = [
    "alembic>=1.17.2",
    "asyncmy>=0.2.11",
    "bcrypt<=4.0.1",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "joblib>=1.3",
    "numpy>=1.24,<2.5",
    "orjson>=3.11.5",
    "pandas>=2.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.6.1,<1.7",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]
dev = [
    "coverage>=7.13.2",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20260124",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["app/tests"]
norecursedirs = [".git", ".venv", "_local_template_backup_*"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
    "B",
    "UP",
    "N",
]
ignore = ["UP046", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/core/db/migrations/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
